# billboard-mood-pipeline

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
src/: pipeline.py
src/core/: archiver.py  cache.py  checkpoint.py  config.py  logger.py  models.py  song_id.py  text_utils.py
src/future/: README.md
src/prompts/: jungian_theme.py
src/stages/: s1_ingest.py  s2_lyrics.py  s3_jungian.py  s3_mood.py  s3_semantic.py  s3_sentiment.py  s3_theme.py  s4_merge.py  s5_report.py
tests/: conftest.py  test_archiver.py  test_ingest.py  test_jungian.py  test_lyrics.py  test_merge.py  test_mood.py  test_pipeline.py  test_report.py  test_semantic.py  test_sentiment.py  test_smoke.py  test_smoke_five_songs.py  test_theme.py
tests/fixtures/: test_config.yaml
tests/fixtures/data/: billboard_top100.json
