[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billboard-mood-pipeline"
version = "0.1.0"
description = "Billboard cultural mood analysis pipeline"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model weight downloads (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
